# build-your-own-rlhf

./: .gitignore  Makefile  README.md  SECURITY.md  commit_per_file.sh  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml  security.yml
docs/: index.md  mkdocs.yml
docs/adr/: 001-ppo-over-reinforce.md  002-separate-value-head.md  003-kl-controller-adaptive.md  004-reward-model-ensemble.md
docs/api/: index.md
docs/architecture/: distributed_training.md  overview.md  ppo_algorithm.md  reference_model.md  reward_model.md  value_function.md
docs/guides/: adding_reward_signal.md  deployment.md  hyperparameter_tuning.md  quickstart.md  training_run.md
infra/: Dockerfile  docker-compose.yml
infra/helm/rlhf-ppo/: Chart.yaml  values.yaml
infra/helm/rlhf-ppo/templates/: _helpers.tpl  configmap.yaml  job.yaml  pvc.yaml  serviceaccount.yaml
infra/terraform/: main.tf  variables.tf
scripts/: evaluate.py  export_onnx.py  train_ppo.py  train_reward_model.py  train_sft.py
src/rlhf/: __init__.py  __main__.py  exceptions.py  py.typed  utils.py
src/rlhf/config/: __init__.py  schema.py
src/rlhf/config/defaults/: ppo.yaml  reward_model.yaml  sft.yaml
src/rlhf/data/: __init__.py  collators.py  preference_dataset.py  preprocessing.py  prompt_dataset.py  schemas.py
src/rlhf/distributed/: __init__.py  strategy.py  utils.py
src/rlhf/evaluation/: __init__.py  evaluator.py  human_eval.py  metrics.py
src/rlhf/inference/: __init__.py  generation.py  stopping_criteria.py
src/rlhf/models/: __init__.py  base.py  policy.py  reference_model.py  reward_model.py  value_head.py
src/rlhf/monitoring/: __init__.py  alerts.py  logger.py
src/rlhf/security/: __init__.py  audit.py  validation.py
src/rlhf/training/: __init__.py
src/rlhf/training/ppo/: __init__.py  algorithm.py  kl_controller.py  rollout.py  scheduler.py  trainer.py
src/rlhf/training/reward_model/: __init__.py  ensemble.py  trainer.py
src/rlhf/training/sft/: __init__.py  trainer.py
tests/: conftest.py
tests/adversarial/: test_numerical_stability.py  test_prompt_injection.py  test_reward_model_poisoning.py
tests/integration/: test_checkpoint_resume.py  test_distributed_fsdp.py  test_ppo_training_loop.py  test_reward_model_training.py  test_sft_training.py
tests/system/: test_full_pipeline.py  test_reward_hacking.py
tests/unit/: test_config.py  test_core_coverage.py  test_data_schemas.py  test_distributed.py  test_evaluation.py  test_gae.py  test_kl_controller.py  test_metrics.py  test_models_base.py  test_monitoring.py  test_ppo_algorithm.py  test_preprocessing.py  test_reward_model.py  test_rollout_buffer.py  test_scheduler.py  test_security.py  test_utils.py  test_value_head.py
